fixed another typo in a French label and regenerated the HTML view.

--- a/ontology/current-version/HTML_view/RiC-O_1-0_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0_documentation.html
@@ -6125,7 +6125,7 @@
             </p>
             <dl>
                <dt>Label(s)</dt>
-               <dd>Record Resource Holding Relation [en]; Relation entre agents et ressources archivistiques ou instantiations
+               <dd>Record Resource Holding Relation [en]; Relation entre agents et ressources archivistiques ou instanciations
          conservées [fr]; Relación entre agentes y recursos documentales que
          conservan [es]</dd>
                <dt>Definition</dt>
@@ -6176,6 +6176,7 @@
             </dl>
             <dl>
                <dt>Change note(s)</dt>
+               <dd>2023-12-30: Fixed a typo in the French label.</dd>
                <dd>2023-12-06: Improved the description of the Relation class (rdfs:comment)
                by clearly specifying how it is directed.</dd>
                <dd>2023-11-12: Aligned with RiC-CM 1.0: updated the description
@@ -31933,7 +31934,7 @@
             <dl>
                <dt>Label(s)</dt>
                <dd>has the role of the Record Resource Holding Relation [en] | a le rôle de la Relation entre agents et ressources archivistiques
-         ou instantiations conservées [fr] | desempeña el papel de la Relación entre agentes y recursos
+         ou instanciations conservées [fr] | desempeña el papel de la Relación entre agentes y recursos
          documentales que conservan [es]</dd>
                <dt>Definition</dt>
                <dd>Connects a RecordResourceHoldingRelation to itself. It is a
@@ -31969,6 +31970,7 @@
                <span class="label">Type</span>: reflexive property</p>
             <dl>
                <dt>Change note(s)</dt>
+               <dd>2023-12-30: Fixed a typo in the French label.</dd>
                <dd>2023-11-08: In order to get a system of rolified Relation classes: created
                the object property, with domain and range the RecordResourceHoldingRelation rolified
                class. Declared it as reflexive. Declared it(s) superproperty(ies).</dd>
@@ -34531,6 +34533,7 @@
             <li>2023, December 28: made a few changes in the ontology introduction
                      (dcterms:description) and metadata.</li>
             <li>2023, December 29: Added the property chain axiom on 'hasCreator'.</li>
+            <li>2023, December 30: Fixed a typo in two French labels.</li>
          </ul>
          <p>
             <a href="#toc">Back to the table of contents</a> | <a href="#top">Back to top</a>
