fixed 3 typos in French labels, regenerated the HTML and modularized version

--- a/ontology/current-version/HTML_view/RiC-O_1-0_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0_documentation.html
@@ -15240,7 +15240,7 @@
             </p>
             <dl>
                <dt>Label(s)</dt>
-               <dd>has documentary form type [en] | a pour type d’objet informtionnel [fr] | tiene como tipo documental [es]</dd>
+               <dd>has documentary form type [en] | a pour type d’objet informationnel [fr] | tiene como tipo documental [es]</dd>
                <dt>Definition</dt>
                <dd>Connects a Record or Record Part to its Documentary Form
          Type.</dd>
@@ -15274,6 +15274,7 @@
             </p>
             <dl>
                <dt>Change note(s)</dt>
+               <dd>2023-12-30: Fixed a typo in the French label.</dd>
                <dd>2023-11-02: Added a new rdfs:label in Spanish.</dd>
                <dd>2023-08-28: Added a new rdfs:label in French.</dd>
                <dd>2021-01-22: changed the superproperty IRI.</dd>
@@ -24506,7 +24507,7 @@
             </p>
             <dl>
                <dt>Label(s)</dt>
-               <dd>is or was analogue instantiation of [en] | est ou a été une instantiation analogique de [fr] | es or era instanciación analogica de [es]</dd>
+               <dd>is or was analogue instantiation of [en] | est ou a été une instanciation analogique de [fr] | es or era instanciación analogica de [es]</dd>
                <dt>Definition</dt>
                <dd>Inverse of 'has or had analogue instantiation' object
          property.</dd>
@@ -24538,6 +24539,7 @@
             </p>
             <dl>
                <dt>Change note(s)</dt>
+               <dd>2023-12-30: Fixed a typo in the French label.</dd>
                <dd>2023-11-27: Added a new rdfs:label in Spanish.</dd>
                <dd>2023-08-29: Added the property.</dd>
             </dl>
@@ -33022,7 +33024,7 @@
             </p>
             <dl>
                <dt>Label(s)</dt>
-               <dd>thing is connected to relation [en] | cosa está conectada con relación [es] | chose est conectée à la relation [fr]</dd>
+               <dd>thing is connected to relation [en] | cosa está conectada con relación [es] | chose est connectée à la relation [fr]</dd>
                <dt>Definition</dt>
                <dd>Connects a Thing to a n-ary Relation.</dd>
             </dl>
@@ -33063,6 +33065,7 @@
             </dl>
             <dl>
                <dt>Change note(s)</dt>
+               <dd>2023-12-30: Fixed a typo in the French label.</dd>
                <dd>2023-11-12: Updated the labels.</dd>
                <dd>2023-11-02: Added a new rdfs:label in Spanish.</dd>
             </dl>
@@ -34533,7 +34536,7 @@
             <li>2023, December 28: made a few changes in the ontology introduction
                      (dcterms:description) and metadata.</li>
             <li>2023, December 29: Added the property chain axiom on 'hasCreator'.</li>
-            <li>2023, December 30: Fixed a typo in two French labels.</li>
+            <li>2023, December 30: Fixed a typo in five French labels.</li>
          </ul>
          <p>
             <a href="#toc">Back to the table of contents</a> | <a href="#top">Back to top</a>
