Fix typo in RiC-O_1-0_documentation.html

--- a/ontology/current-version/HTML_view/RiC-O_1-0_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0_documentation.html
@@ -6669,7 +6669,7 @@
                <dt>Definition</dt>
                <dd>The role an Agent plays in some context (usually in some creation
          relation). Not to be confused with a Position (position of an agent in some group). For
-         example, a Person who is the head of some Corporate bBdy may play the role of annotator (of
+         example, a Person who is the head of some Corporate Body may play the role of annotator (of
          a record) in a creation relation.</dd>
             </dl>
             <dl>
