another detail changed in the OWL file; regenerated the HTML view

--- a/ontology/current-version/HTML_view/RiC-O_1-0-1_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0-1_documentation.html
@@ -246,7 +246,7 @@
          <p>See also the project on GitHub, where other resources can be
                         found: <a href="https://github.com/ICA-EGAD/RiC-O" target="_blank">https://github.com/ICA-EGAD/RiC-O</a>, and the accompanying website (<a href="https://ica-egad.github.io/RiC-O/" target="_blank">https://ica-egad.github.io/RiC-O/</a>).</p>
          <p>
-            <span class="metadata_label">Prior version</span>: RiC-O 1.0.</p>
+            <span class="metadata_label">Prior version</span>: <a href="https://raw.githubusercontent.com/ICA-EGAD/RiC-O/master/ontology/previous-versions/RiC-O_v1-0_release/RiC-O_1-0.rdf">RiC-O 1.0</a>.</p>
          <p>
             <span class="metadata_label">Incompatible with version:</span>
             <a href="https://raw.githubusercontent.com/ICA-EGAD/RiC-O/master/ontology/previous-versions/RiC-O_v0-2_release/RiC-O_v0-2.rdf">0.2</a>.</p>
@@ -291,7 +291,7 @@
                milestone. Apart from slightly modifying a few details in the introduction and fixing
                a few typos in the documentation of RiC-O 1.0, version 1.0.1 only brings one change:
                it fixes the IRI of 'hasOrHadSomeMemberswithDocumentaryFormType' object property (changed to
-               'hasOrHadSomeMembersWithDocumentaryFormType').</p>
+               <a href="#hasOrHadSomeMembersWithDocumentaryFormType">rico:hasOrHadSomeMembersWithDocumentaryFormType</a>).</p>
             <p>RiC-O provides a generic vocabulary and formal rules for creating RDF datasets
                to describe any kind of archival record resource, whether natively or by transforming
                existing metadata (or generating them from existing archival metadata). It supports
@@ -335,7 +335,7 @@
                      the needs that a growing community of users was expressing</strong>. On
                   the other hand, it was obviously a question of <strong>making RiC-O 1.0
                      compliant with RiC-CM 1.0</strong>.</p>
-            <p>As the result of this work, RiC-O 1.0 defines:</p>
+            <p>As the result of this work, RiC-O 1.0.1 defines:</p>
             <ul>
                <li>
                   <strong>105 classes</strong>, one less than in v0.2. As in RiC-CM
@@ -384,7 +384,7 @@
                      each of the n-ary relations, could then be deleted. A full accounting of the
                      rolification of n-ary relations may be found at <a href="https://github.com/ICA-EGAD/RiC-O/issues/67" target="_blank">https://github.com/ICA-EGAD/RiC-O/issues/67</a>).</li>
             </ul>
-            <p>RiC-O 1.0 therefore presents itself as an ontology that is <strong>more
+            <p>RiC-O 1.0.1 therefore presents itself as an ontology that is <strong>more
                      compact than RiC-O 0.2, while being richer, technically opening up new
                      possibilities (with transitive relations) and preserving the semantics defined
                      previously</strong>.</p>
@@ -475,7 +475,7 @@
          <p>RiC-O (Records in Contexts-Ontology) is an OWL ontology for describing archival
                record resources. As the third part of Records in Contexts standard, it is a formal
                representation of Records in Contexts Conceptual Model (RiC-CM). This version, which
-               is v1.0, is the latest official release. It is compliant with RiC-CM v1.0.</p>
+               is v1.0.1, is the latest official release. It is compliant with RiC-CM v1.0.</p>
          <p>The following diagram shows the main RiC-CM 1.0 entities and a few relations
                between them: <a target="_blank"
                href="https://github.com/ICA-EGAD/RiC-O/blob/7bc6d5d59ecc85a4b901cc79d649ae50209fd69e/diagrams/diagrams_v1-0/RiC-CM-overview/diagram_RiC-CM-overview-RiC-v1-0.jpg?raw=true"
@@ -844,7 +844,7 @@
                         component.</li>
                   <li>information about possible mappings with other models or ontologies
                            (<a href="#closeTo">rico:closeTo</a>, rarely used in this
-                        1.0 version)).</li>
+                        1.0.1 version)).</li>
                </ul>
                <p>Any change in the definition of a class or property made since December
                      2019 is documented using a skos:changeNote.</p>
