updated the HTML documentation

--- a/ontology/current-version/HTML_view/RiC-O_1-0-1_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0-1_documentation.html
@@ -241,7 +241,7 @@
       <div id="metadata">
          <h3>Ontology metadata</h3>
          <p>
-            <span class="metadata_label">This version</span>: <strong>Version 1.0.1 - 2024-04-25.</strong>
+            <span class="metadata_label">This version</span>: <strong>Version 1.0.1 - 2024-05-02.</strong>
          </p>
          <p>See also the project on GitHub, where other resources can be
                         found: <a href="https://github.com/ICA-EGAD/RiC-O" target="_blank">https://github.com/ICA-EGAD/RiC-O</a>, and the accompanying website (<a href="https://ica-egad.github.io/RiC-O/" target="_blank">https://ica-egad.github.io/RiC-O/</a>).</p>
@@ -269,6 +269,8 @@
          member of EGAD and EGAD RiC-O team from 2012 to 2022</dd>
             <dd>Tobias Wildi (University of Applied Sciences of the Grisons,
          Switzerland), member of EGAD and EGAD RiC-O team from 2019</dd>
+            <dd>Richard David Williamson (National Archives of Norway), member
+         of EGAD and of EGAD RiC-O team from 2024</dd>
             <dd>Ivo Zandhuis (Consultant Digital Cultural Heritage, The
          Netherlands), member of EGAD and EGAD RiC-O team from 2023</dd>
          </dl>
@@ -290,8 +292,8 @@
                was the first stable and complete version of this ontology, and thus a major
                milestone. Apart from slightly modifying a few details in the introduction and fixing
                a few typos in the documentation of RiC-O 1.0, version 1.0.1 only brings one change:
-               it fixes the IRI of 'hasOrHadSomeMemberswithDocumentaryFormType' object property (changed to
-               <a href="#hasOrHadSomeMembersWithDocumentaryFormType">rico:hasOrHadSomeMembersWithDocumentaryFormType</a>).</p>
+               it fixes the IRI of 'hasOrHadSomeMemberswithDocumentaryFormType' object property
+               (changed to <a href="#hasOrHadSomeMembersWithDocumentaryFormType">rico:hasOrHadSomeMembersWithDocumentaryFormType</a>).</p>
             <p>RiC-O provides a generic vocabulary and formal rules for creating RDF datasets
                to describe any kind of archival record resource, whether natively or by transforming
                existing metadata (or generating them from existing archival metadata). It supports
@@ -384,10 +386,10 @@
                      each of the n-ary relations, could then be deleted. A full accounting of the
                      rolification of n-ary relations may be found at <a href="https://github.com/ICA-EGAD/RiC-O/issues/67" target="_blank">https://github.com/ICA-EGAD/RiC-O/issues/67</a>).</li>
             </ul>
-            <p>RiC-O 1.0.1 therefore presents itself as an ontology that is <strong>more
-                     compact than RiC-O 0.2, while being richer, technically opening up new
-                     possibilities (with transitive relations) and preserving the semantics defined
-                     previously</strong>.</p>
+            <p>RiC-O 1.0.1 therefore presents itself as an ontology that is
+                     <strong>more compact than RiC-O 0.2, while being richer, technically
+                     opening up new possibilities (with transitive relations) and preserving the
+                     semantics defined previously</strong>.</p>
             <p>Besides, an effort has been made regarding the documentation of the ontology.
                   In particular, <strong>the labels of each class and property (rdfs:label
                      annotations) are now available in French and Spanish as well as in
@@ -34571,6 +34573,7 @@
                      change the headers of the subsections in 'From RiC-CM to RiC-O'; added a few
                      details to an sentence in the section on Ric-O properties; adjusted the
                      metadata, mainly moved to v1.0.1.</li>
+            <li>2024, May 2: Added Richard David Williamson to the list of contributors and set the date of v1.0.1 to May 2, 2024.</li>
          </ul>
          <p>
             <a href="#toc">Back to the table of contents</a> | <a href="#top">Back to top</a>
