fixed the link to the second image

--- a/ontology/current-version/HTML_view/RiC-O_1-0-1_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0-1_documentation.html
@@ -679,9 +679,9 @@
                            ‘thingIsSourceOfRelation/organicProvenanceRelation_role/relationHasTarget’,
                            where the intermediate node is an instance of OrganicProvenanceRelation:<br/>
                         <a target="_blank"
-                           href="https://github.com/ICA-EGAD/RiC-O/blob/prepare_1.0.1_version/ontology/current-version/HTML_view/rico_hasOrganicProvenance.png?raw=true"
-                           title="https://github.com/ICA-EGAD/RiC-O/blob/prepare_1.0.1_version/ontology/current-version/HTML_view/rico_hasOrganicProvenance.png?raw=true">
-                           <img src="https://github.com/ICA-EGAD/RiC-O/blob/prepare_1.0.1_version/ontology/current-version/HTML_view/rico_hasOrganicProvenance.png?raw=true"
+                           href="https://github.com/ICA-EGAD/RiC-O/blob/master/ontology/current-version/HTML_view/rico_hasOrganicProvenance.png?raw=true"
+                           title="https://github.com/ICA-EGAD/RiC-O/blob/master/ontology/current-version/HTML_view/rico_hasOrganicProvenance.png?raw=true">
+                           <img src="https://github.com/ICA-EGAD/RiC-O/blob/master/ontology/current-version/HTML_view/rico_hasOrganicProvenance.png?raw=true"
                                 alt="rico:hasOrganicProvenance object property as a shortcut"
                                 class="code"/>
                         </a>
