fixed a typo in 2 of the EDTF examples of normalizedDateValue. Regenerated the HTML and modularized version.

--- a/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
@@ -9673,9 +9673,9 @@
                <dd>
                   <span class="example">"1948/ (a date range in EDTF, starting in 1948, end unknown)"</span> [en]</dd>
                <dd>
-                  <span class="example">"1550,1551,1553,1555 (a date set in EDTF, meaning one of the years 1550, 1151, 1553, 1555)"</span> [en]</dd>
+                  <span class="example">"1550,1551,1553,1555 (a date set in EDTF, meaning one of the years 1550, 1551, 1553, 1555)"</span> [en]</dd>
                <dd>
-                  <span class="example">"{1550,1151,1553,1555} (a date set in EDTF, meaning all of the years 1550, 1151, 1553, 1555)"</span> [en]</dd>
+                  <span class="example">"{1550,1551,1553,1555} (a date set in EDTF, meaning all of the years 1550, 1551, 1553, 1555)"</span> [en]</dd>
                <dd>
                   <span class="example">"{1805,1815..1820} (a date set in EDTF, meaning all of the years 1805, 1815, 1816, 1817, 1818, 1819, 1820)"</span> [en]</dd>
             </dl>
@@ -9698,6 +9698,7 @@
             </dl>
             <dl>
                <dt>Change note(s)</dt>
+               <dd>2024-09-02: Fixed a typo in two of the EDTF examples.</dd>
                <dd>2023-11-11: Aligned with RiC-CM 1.0: updated the examples
                     (skos:example).</dd>
                <dd>2023-11-02: Added a new rdfs:label in Spanish.</dd>
@@ -34883,6 +34884,7 @@
                             rico:isOrWasControllerOf; rico:isOrWasJurisdictionOf.</li>
             <li>2024, September 2: Moved to v1.0.2: updated the metadata, and added
                             a owl:versionIRI to this new version. Moved v1.0.1 to the previous-versions subfolder.</li>
+            <li>2024, September 2: Fixed a typo in two of the EDTF examples.</li>
          </ul>
          <p>
             <a href="#toc">Back to the table of contents</a> | <a href="#top">Back to top</a>
