fixed a phrase in the introduction, thus regenerated the HTML view. Also fixed a small issue in the mmodularized version

--- a/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
@@ -395,7 +395,7 @@
                             this, such as for example <a href="#leadershipRelation_role">rico:leadershipRelation_role</a>; the definition of n-ary
                             Relation classes (such as <a href="#LeadershipRelation">rico:LeadershipRelation</a>) was revised to introduce an
                             equivalence with these properties when they have the same source and the
-                            same target, and the chain property axioms of the corresponding binary
+                            same target, and the property chain axioms of the corresponding binary
                             properties (such as <a href="#hasOrHadLeader">rico:hasOrHadLeader</a>) were revised. 166 object properties,
                             which existed in RiC-O 0.2 and were specific to each of the n-ary
                             relations, could then be deleted. A full accounting of the rolification
