fixed a few typos in the appendix and in one change note. Changed the date of the release to 2024-09-04.

--- a/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
@@ -241,7 +241,7 @@
       <div id="metadata">
          <h3>Ontology metadata</h3>
          <p>
-            <span class="metadata_label">This version</span>: <strong>Version 1.0.2 - 2024-09-02.</strong>
+            <span class="metadata_label">This version</span>: <strong>Version 1.0.2 - 2024-09-04.</strong>
          </p>
          <p>See also the project on GitHub, where other resources can be
                         found: <a href="https://github.com/ICA-EGAD/RiC-O" target="_blank">https://github.com/ICA-EGAD/RiC-O</a>, and the accompanying website (<a href="https://ica-egad.github.io/RiC-O/" target="_blank">https://ica-egad.github.io/RiC-O/</a>).</p>
@@ -29521,7 +29521,7 @@
                <dt>Change note(s)</dt>
                <dd>2023-11-12: Aligned with RiC-CM 1.0: updated the description
                     (rdfs:comment).</dd>
-               <dd>2023-11-08: Added the chain property axiom in order to make this
+               <dd>2023-11-08: Added the property chain axiom in order to make this
                     property a shortcut.</dd>
                <dd>2023-11-02: Added a new rdfs:label in Spanish.</dd>
                <dd>2023-08-28: Added a new rdfs:label in French.</dd>
@@ -34793,7 +34793,7 @@
             <li>2023, November 8: <strong>rolifying the Relation classes, step
                                 1</strong>: created 48 reflexive object properties that rolify
                             the classes; modified the specifications of the Relation classes;
-                            modified the chain property axioms of the corresponding shortcuts. Fixed
+                            modified the property chain axioms of the corresponding shortcuts. Fixed
                             the range of isExtentOf.</li>
             <li>2023, November 8, later: <strong>rolifying the Relation
                                 classes, step 2</strong>: deleted 166 object properties that
@@ -34878,13 +34878,14 @@
                             for each of these object properties can be inferred for all individuals
                             in their domain).</li>
             <li>2024, September 2: Fixed the French label (rdfs:label) of the
-                            following object properties: rico:isOrWasInforcedBy;
+                            following object properties: rico:isOrWasEnforcedBy;
                             rico:isOrWasResponsibleForEnforcing;
                             rico:hasOrHadIntellectualPropertyRightsHolder; rico:hasOrHadController;
                             rico:isOrWasControllerOf; rico:isOrWasJurisdictionOf.</li>
             <li>2024, September 2: Moved to v1.0.2: updated the metadata, and added
                             a owl:versionIRI to this new version. Moved v1.0.1 to the previous-versions subfolder.</li>
-            <li>2024, September 2: Fixed a typo in two of the EDTF examples.</li>
+            <li>2024, September 2: Fixed a typo in two of the EDTF examples for rico:normalizedDateValue.</li>
+            <li>2024, September 4: Fixed a few typos in Appendix 1 and in a change note.</li>
          </ul>
          <p>
             <a href="#toc">Back to the table of contents</a> | <a href="#top">Back to top</a>
