--- a/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-0-2_documentation.html
@@ -34885,7 +34885,7 @@
             <li>2024, September 2: Moved to v1.0.2: updated the metadata, and added
                             a owl:versionIRI to this new version. Moved v1.0.1 to the previous-versions subfolder.</li>
             <li>2024, September 2: Fixed a typo in two of the EDTF examples for rico:normalizedDateValue.</li>
-            <li>2024, September 4: Fixed a few typos in Appendix 1 and in a change note.</li>
+            <li>2024, September 4: Fixed a few typos in Appendix 1 and in a change note. Changed the date of the release (it is 2024 September 4th now).</li>
          </ul>
          <p>
             <a href="#toc">Back to the table of contents</a> | <a href="#top">Back to top</a>
