fixed details in the history note

--- a/ontology/current-version/HTML_view/RiC-O_1-1_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-1_documentation.html
@@ -337,7 +337,7 @@
                   the other hand, it was obviously a question of <strong>making RiC-O 1.0
                      compliant with RiC-CM 1.0</strong>.</p>
             <p>
-               <strong>After the release of RiC-O 1.0 in February 2024, the development
+               <strong>After the release of RiC-O 1.0 in December 2023, the development
                      team continued to improve the ontology</strong>. Bugs were fixed and a few
                   adjustments made to RiC-O documentation in v1.0.1 and 1.0.2. Then version 1.1
                   introduced, in addition to some corrections and adjustments, several significant
@@ -408,10 +408,9 @@
                         rico:Proxy, rico:Instantiation, rico:Date or rico:Relation</strong>.
                      The following list describes the main additions made.<ul>
                      <li>as a rico:TitleType class was added, the object properties needed
-                           to connect it to Instantiation, RecordResource and Rule were also added.
-                              <strong>The names of the higher level 'hasOrHadCategory' and
-                              'isOrWasCategoryOf' object properties have been changed to
-                              'hasOrHadType' and 'isOrWasTypeOf'</strong>.</li>
+                           to connect it to rico:Title. <strong>The names of the higher level
+                              'hasOrHadCategory' and 'isOrWasCategoryOf' object properties have been
+                              changed to 'hasOrHadType' and 'isOrWasTypeOf'</strong>.</li>
                      <li>a <a href="#studiesOrStudiedAt">rico:studiesOrStudiedAt</a> object property - and the inverse
                            one, <a href="#isOrWasAttendedByStudent">rico:isOrWasAttendedByStudent</a> - was added, subproperty of
                            rico:isOrWasMemberOf, to connect a Person to a Corporate Body at which
