--- a/ontology/current-version/HTML_view/RiC-O_1-1_documentation.html
+++ b/ontology/current-version/HTML_view/RiC-O_1-1_documentation.html
@@ -354,7 +354,7 @@
                      corresponding to the new RiC-A44 Mandate Type attribute of RiC-CM 1.0. A
                      generic <a href="#OrganicOrFunctionalProvenanceRelation">rico:OrganicOrFunctionalProvenanceRelation</a> class was also added.
                      In RiC-O 1.1, a new <a href="#TitleType">rico:TitleType</a>
-                     class was added, as well as a <a href="#StudyingAtRelation">rico:StudyingAtRelation</a> class.</li>
+                     class was added, as well as a <a href="#StudyAtRelation">rico:StudyAtRelation</a> class.</li>
                <li>
                   <strong>75 datatype properties</strong>. Several properties had been
                      renamed in RiC-O 1.0, to make the ontology compliant with RiC-CM 1.0 (so
@@ -408,15 +408,16 @@
                         rico:Proxy, rico:Instantiation, rico:Date or rico:Relation</strong>.
                      The following list describes the main additions made.<ul>
                      <li>as a rico:TitleType class was added, the object properties needed
-                           to connect it to rico:Title. <strong>The names of the higher level
-                              'hasOrHadCategory' and 'isOrWasCategoryOf' object properties have been
-                              changed to 'hasOrHadType' and 'isOrWasTypeOf'</strong>.</li>
+                           to connect it to rico:Title were also created. <strong>The names of
+                              the higher level 'hasOrHadCategory' and 'isOrWasCategoryOf' object
+                              properties have been changed to 'hasOrHadType' and
+                              'isOrWasTypeOf'</strong>.</li>
                      <li>a <a href="#studiesOrStudiedAt">rico:studiesOrStudiedAt</a> object property - and the inverse
                            one, <a href="#isOrWasAttendedByStudent">rico:isOrWasAttendedByStudent</a> - was added, subproperty of
                            rico:isOrWasMemberOf, to connect a Person to a Corporate Body at which
                            the person studies or studied; as already said above, the corresponding
-                              <a href="#StudyingAtRelation">rico:StudyingAtRelation</a> n-ary class was also
-                           created;</li>
+                              <a href="#StudyAtRelation">rico:StudyAtRelation</a>
+                           n-ary class was also created;</li>
                      <li>object properties were added to be used for accumulation dates,
                            with domain the union of rico:RecordResource and rico:Instantiation (for
                               <a href="#hasAccumulationDate">rico:hasAccumulationDate</a>), or RecordSet (for <a href="#hasOrHadAllMembersWithAccumulationDate">rico:hasOrHadAllMembersWithAccumulationDate</a>, <a href="#hasOrHadSomeMembersWithAccumulationDate">rico:hasOrHadSomeMembersWithAccumulationDate</a>, <a href="#hasOrHadMostMembersWithAccumulationDate">rico:hasOrHadMostMembersWithAccumulationDate</a>), along with
@@ -40839,7 +40840,7 @@
                      rico:normalizedDateValue.</li>
             <li>2024, September 4: Fixed a few typos in Appendix 1 and in a change note.
                      Changed the date of the release (it is 2024 September 4th now).</li>
-            <li>2024, October 4: Added TitleType, hasTitleType isTitleTypeOf;
+            <li>2024, October 4: Added TitleType, hasTitleType and isTitleTypeOf;
                         <strong>Changed hasOrHadCategory et al. into
                      hasOrHadType</strong>
             </li>
